# hackathon-todo

./: .gitignore  CLAUDE.md  MULTI_LANGUAGE_FEATURE.md  PHASE_3_COMPLETE.md  README.md  VOICE_INPUT_FEATURE.md  VOICE_INPUT_TEST_PLAN.md  commands.md  helm_comands.md  manual_test_phase4.py  manual_test_phase6.py  manual_test_phase7.py  minikube.md  portfolio.md  pyproject.toml  steps_deployment.md  test_voice_input.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: CLAUDE.md
backend/api/: .dockerignore  .env.example  .gitignore  Dockerfile  MANUAL_TEST_GUIDE.md  QUICK_TEST_REFERENCE.md  README.md  alembic.ini  config.py  pyproject.toml  requirements.txt  test_backend_crud.py  test_connection.py  test_search_filter_sort.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 001_initial_schema.py  002_add_conversations_and_messages.py  003_add_advanced_task_fields.py  004_add_search_and_reminder_indexes.py
backend/api/src/: config.py  main.py
backend/api/src/agents/: __init__.py  runner.py  task_agent.py
backend/api/src/api/: auth.py  chatkit.py  deps.py  tasks.py
backend/api/src/chatkit/: __init__.py  server.py
backend/api/src/db/: session.py
backend/api/src/mcp/: __init__.py  server.py
backend/api/src/mcp/tools/: __init__.py
backend/api/src/models/: __init__.py  conversation.py  event.py  message.py  reminder.py  task.py  task_tag.py  user.py
backend/api/src/schemas/: auth.py  task.py
backend/api/src/services/: auth.py  dapr_client.py  event_publisher.py  filter_service.py  recurrence_processor.py  recurrence_service.py  search_service.py  tag_service.py  tasks.py
backend/api/src/store/: __init__.py  chatkit_store.py
backend/api/tests/: conftest.py  test_agent.py  test_chat_api.py  test_event_publisher.py  test_mcp_tools.py  test_utils.py
backend/console/: README.md  final_validation_checklist.md  manual_test_phase3.py  manual_test_phase4.py  manual_test_phase5.py  manual_test_phase6.py  manual_test_phase7.py  manual_test_phase8_end_to_end.md  performance_test.py  pyproject.toml  quickstart_validation_results.md
backend/console/src/hackathon_todo/: __init__.py  main.py  models.py  storage.py  ui.py
backend/console/tests/: conftest.py  test_integration.py  test_models.py  test_storage.py  test_ui.py
backend/reminder-service/: Dockerfile  README.md  pyproject.toml
backend/reminder-service/src/: __init__.py  config.py  database.py  main.py
backend/reminder-service/src/consumers/: __init__.py  task_completed_consumer.py  task_created_consumer.py  task_deleted_consumer.py  task_updated_consumer.py
backend/reminder-service/src/models/: __init__.py
backend/reminder-service/src/services/: __init__.py  reminder_processor.py
backend/reminder-service/tests/: __init__.py  conftest.py  test_consumers.py  test_reminder_processor.py
frontend/: .dockerignore  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/contexts/: I18nContext.tsx
frontend/src/styles/: globals.css
helm/todo-app/: Chart.yaml  values-dev.yaml  values-prod-aws.yaml  values-prod.yaml  values.yaml
helm/todo-app/dependencies/: redis.yaml  redpanda.yaml
helm/todo-app/templates/: NOTES.txt  _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  (+9 more)
scripts/: build-for-minikube.sh  build-local-images.sh  deploy-to-aws.sh  deploy-to-minikube.sh  e2e-test-minikube.sh  install-dapr-minikube.sh  setup-minikube.sh  validate-deployment.sh
specs/: architecture.md  overview.md
specs/001-step-1-core-features/: plan.md  spec.md  tasks.md
specs/002-step-2-web-app/: plan.md  spec.md  tasks.md
specs/003-step-3-ai-chatbot/: IMPLEMENTATION_COMPLETE.md  plan.md  spec.md  tasks.md
specs/004-k8s-deployment/: METRICS.md  TROUBLESHOOTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-step-5-cloud-deployment/: spec.md  tasks.md
specs/api/: README.md
specs/database/: README.md
specs/features/: README.md  step-1-console-todo.md
specs/ui/: README.md
src/hackathon_todo/: __init__.py
tests/: test_integration.py  test_models.py  test_ui.py
(+136 files in other folders)
